--- a/welcome_sic.html
+++ b/welcome_sic.html
@@ -25,7 +25,7 @@
       </div>
       <div id="row2" class="row">
         <div class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel1" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">transform</i>
@@ -37,7 +37,7 @@
           </a>
         </div>
         <div class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel2" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">show_chart</i>
@@ -49,7 +49,7 @@
           </a>
         </div>
         <div class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel3" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">assignment</i>
@@ -63,7 +63,7 @@
       </div>
       <div id="row3" class="row">
         <div id="col4" class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel4" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">lightbulb_outline</i>
@@ -75,7 +75,7 @@
           </a>
         </div>
         <div id="col5" class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel5" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">assignment_turned_in</i>
@@ -87,7 +87,7 @@
           </a>
         </div>
         <div id="col5" class="col s12 m12 l4">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel6" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">assignment_turned_in</i>
@@ -101,7 +101,7 @@
       </div>
       <div id="row4" class="row">
         <div id="col4" class="col s12 m12 l6">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel7" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">lightbulb_outline</i>
@@ -113,7 +113,7 @@
           </a>
         </div>
         <div id="col4" class="col s12 m12 l6">
-          <a href="sic_home.html">
+          <a href="sic_hom.html">
             <div id="nivel8" class="card">
               <div class="card-content black-text">
                 <i class="large material-icons">lightbulb_outline</i>
