--- a/sic_hom.html
+++ b/sic_hom.html
@@ -95,7 +95,7 @@
 
           <!-- NIVEL 1 -->
           <div id="nivel1" class="collection">
-            <a id="#pdf1" href="#!" class="collection-item">Resolución acreditación institucional (069)</a>
+            <a id="pdf1" href="#!" class="collection-item">Resolución acreditación institucional (069)</a>
             <a href="#!" class="collection-item">Fortalezas y oportunidades de mejora (Resolución - Informe de Pares)</a>
             <a href="#!" class="collection-item">Equilibrio en asignación docente</a>
             <a href="#!" class="collection-item">Formación doctoral</a>
@@ -199,7 +199,6 @@
 
         <!-- CONTENIDO DE LAS TEMATICAS -->
         <div id="content-viewer" class="col s12 m12 l9">
-          <embed src="pdf/4-Cuidado-Territorios_sostenibles.pdf" type="application/pdf" width="100%" height="100" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
         </div>
       </div>
     </main>
