--- a/sic_hom.html
+++ b/sic_hom.html
@@ -50,42 +50,42 @@
         <div id="side-nav" class="col s12 m12 l3">
           <ul id="tabs-swipe-demo" class="tabs">
             <li>
-              <a href="#nivel1" class="active">
+              <a id="tab-nivel1" href="#" class="tooltipped" data-position="top" data-tooltip="TRANSFORMACIONES 2014 - 2017">
                 <i class="small material-icons">transform</i>
               </a>
             </li>
             <li>
-              <a href="#nivel2" class=" tooltipped" data-position="top" data-tooltip="UNIVERSIDAD EN CIFRAS">
+              <a id="tab-nivel2" href="#" class="tooltipped" data-position="top" data-tooltip="UNIVERSIDAD EN CIFRAS">
                 <i class="small material-icons">show_chart</i>
               </a>
             </li>
             <li>
-              <a href="#nivel3" class="tooltipped" data-position="top" data-tooltip="SINOPSIS">
+              <a id="tab-nivel3" href="#" class="tooltipped" data-position="top" data-tooltip="SINOPSIS">
                 <i class="small material-icons">assignment</i>
               </a>
             </li>
             <li>
-              <a href="#nivel4" class="tooltipped" data-position="top" data-tooltip="METODOLOGÍA DE LA AUTOEVALUACIÓN">
+              <a id="tab-nivel4" href="#" class="tooltipped" data-position="top" data-tooltip="METODOLOGÍA DE LA AUTOEVALUACIÓN">
                 <i class="small material-icons">lightbulb_outline</i>
               </a>
             </li>
             <li>
-              <a href="#nivel5" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
+              <a id="tab-nivel5" href="#" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
                 <i class="small material-icons">assignment_turned_in</i>
               </a>
             </li>
             <li>
-              <a href="#nivel6" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
+              <a id="tab-nivel6" href="#" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
                 <i class="small material-icons">assignment_turned_in</i>
               </a>
             </li>
             <li>
-              <a href="#nivel7" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
+              <a id="tab-nivel7" href="#" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
                 <i class="small material-icons">assignment_turned_in</i>
               </a>
             </li>
             <li>
-              <a href="#nivel8" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
+              <a id="tab-nivel8" href="#" class="tooltipped" data-position="top" data-tooltip="RESULTADOS DE LA AUTOEVALUACIÓN 2017">
                 <i class="small material-icons">assignment_turned_in</i>
               </a>
             </li>
@@ -200,7 +200,6 @@
         <!-- CONTENIDO DE LAS TEMATICAS -->
         <div id="content-viewer" class="col s12 m12 l9">
         </div>
-      </div>
     </main>
 
     <!-- FOOTER -->
